--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -36,6 +36,22 @@ authors="jayu" #optional
 description='''
 Introduces the items Aspect of the End (Inspired to Hypixel Skyblock's Aspect of the End), with Netherforged and Dragonforged upgrades, Aspect Shard crafting ingredient, Ender Trap block and Shulker Wand.
 Cooldowns and ranges are configurable.
+
+Items added:
+- Aspect Shard
+  - Crafting ingredient dropped by Endermen.
+- Aspect of The End
+  - Diamond sword that teleports 8 blocks on right click.
+- Netherforged Aspect of The End
+  - Upgrades Aspect of The End with higher attack power and less cooldown.
+- Dragonforged Aspect of The End
+  - Upgrades Netherforged Aspect of The End with higher attack power abd less cooldown.
+- Shulker Wand
+  - Shoots Shulker Bullets with levitation effect.
+- Ender Trap
+  - Traps teleporting endermen and players by teleporting them on top of the block.
+
+Recipes viewable with JEI, coming here soon.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.end_aspected]] #optional
