--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.0.6.0'
-group = 'com.jayu.end_aspected' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.jayugg.end_aspected' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'end_aspected'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
