--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ logoFile="end_aspected.png" #optional
 # A text field displayed in the mod UI
 credits="" #optional
 # A text field displayed in the mod UI
-authors="jayu" #optional
+authors="jayugg" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Introduces the items Aspect of the End (Inspired to Hypixel Skyblock's Aspect of the End), with Netherforged and Dragonforged upgrades, Aspect Shard crafting ingredient, Ender Trap block and Shulker Wand.
