--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,20 +38,19 @@ Introduces the items Aspect of the End (Inspired to Hypixel Skyblock's Aspect of
 Cooldowns and ranges are configurable.
 
 Items added:
-- Aspect Shard
-  - Crafting ingredient dropped by Endermen.
-- Aspect of The End
-  - Diamond sword that teleports 8 blocks on right click.
-- Netherforged Aspect of The End
-  - Upgrades Aspect of The End with higher attack power and less cooldown.
-- Dragonforged Aspect of The End
-  - Upgrades Netherforged Aspect of The End with higher attack power abd less cooldown.
-- Shulker Wand
-  - Shoots Shulker Bullets with levitation effect.
-- Ender Trap
-  - Traps teleporting endermen and players by teleporting them on top of the block.
+- Aspect Shard: Crafting ingredient dropped by Endermen.
+- Aspect of The End: Diamond sword that teleports 8 blocks on right click.
+- Netherforged Aspect of The End: Upgrades Aspect of The End with higher attack power and less cooldown.
+- Dragonforged Aspect of The End: Upgrades Netherforged Aspect of The End with higher attack power abd less cooldown.
+- Shulker Wand: Shoots Shulker Bullets with levitation effect.
+- Ender Trap: Traps teleporting endermen and players by teleporting them on top of the block.
 
-Recipes viewable with JEI, coming here soon.
+Enchantments Added:
+- Ender Slayer: Additional damage to End mobs.
+- Destabilise: Inflicts Unstable Phase potion effect.
+
+Potion Effects Added:
+- Unstable Phase: Afflicted entity takes damage whenever they try to teleport.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.end_aspected]] #optional
