--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ jar {
             "Specification-Vendor": "end_aspectedsareus",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
-            "Implementation-Version": "${file.jarVersion}",
+            "Implementation-Version": "${version}",
             "Implementation-Vendor" :"end_aspectedsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
