--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -34,23 +34,32 @@ credits="" #optional
 authors="jayugg" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Introduces the items Aspect of the End (Inspired to Hypixel Skyblock's Aspect of the End), with Netherforged and Dragonforged upgrades, Aspect Shard crafting ingredient, Ender Trap block and Shulker Wand.
-Cooldowns and ranges are configurable.
+Introduces the items Aspect of the End (Inspired to Hypixel Skyblock's Aspect of the End) with my own personal twist. Includes upgrades to the sword, some effects and blocks that affect teleporting entities and new enchants, Cooldowns and ranges are configurable in the end_aspected.toml file in the config folder.
 
-Items added:
+Items:
 - Aspect Shard: Crafting ingredient dropped by Endermen.
 - Aspect of The End: Diamond sword that teleports 8 blocks on right click.
 - Netherforged Aspect of The End: Upgrades Aspect of The End with higher attack power and less cooldown.
 - Dragonforged Aspect of The End: Upgrades Netherforged Aspect of The End with higher attack power abd less cooldown.
 - Shulker Wand: Shoots Shulker Bullets with levitation effect.
-- Ender Trap: Traps teleporting endermen and players by teleporting them on top of the block.
 
-Enchantments Added:
+Blocks:
+- Ender Trap: Traps teleporting Endermen, Shulker and Players in a 32 block range by teleporting them on top of the block.
+
+Enchantments:
 - Ender Slayer: Additional damage to End mobs.
 - Destabilise: Inflicts Unstable Phase potion effect.
 
-Potion Effects Added:
+Potion Effects:
 - Unstable Phase: Afflicted entity takes damage whenever they try to teleport.
+
+Other functionalities:
+- Weaponsmith Villagers can trade items related to the mod.
+
+Future Additions:
+- Aspected Arrows
+- Unstable Phase potions
+- Destabilise enchantment crafting recipe (?)
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.end_aspected]] #optional
