Updated everything except for Aspect of the End, Shulker Wand and Aspected Arrow.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,10 +1,10 @@
-public net.minecraft.entity.merchant.villager.VillagerTrades$DyedArmorForEmeraldsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForItemsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForMapTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForVillageTypeItemTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$EnchantedBookForEmeraldsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$EnchantedItemForEmeraldsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$ItemWithPotionForEmeraldsAndItemsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsAndItemsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsTrade
-public net.minecraft.entity.merchant.villager.VillagerTrades$SuspiciousStewForEmeraldTrade
+public net.minecraft.world.entity.npc.VillagerTrades$DyedArmorForEmeralds
+public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForItems
+public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForMap
+public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForVillageTypeItem
+public net.minecraft.world.entity.npc.VillagerTrades$EnchantedBookForEmeralds
+public net.minecraft.world.entity.npc.VillagerTrades$EnchantedItemForEmeralds
+public net.minecraft.world.entity.npc.VillagerTrades$ItemWithPotionForEmeraldsAndItems
+public net.minecraft.world.entity.npc.VillagerTrades$ItemsForEmeraldsAndItems
+public net.minecraft.world.entity.npc.VillagerTrades$ItemsForEmeralds
+public net.minecraft.world.entity.npc.VillagerTrades$SuspiciousStewForEmerald
