--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 version = '2.0.2-1.19.2'
-group = 'com.jayugg.end_aspected' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'net.jayugg.end_aspected' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'end_aspected'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
