--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -81,3 +81,10 @@ Future Additions:
     versionRange="[1.19.2,1.19.3)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.end_aspected]]
+    modId="curios"
+    mandatory=false
+    versionRange="[1.19.2-5.1.4.1,)"
+    ordering="NONE"
+    side="BOTH"
+
