--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -81,3 +81,10 @@ Future Additions:
     versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.end_aspected]]
+    modId="curios"
+    mandatory=false
+    versionRange="[1.16.5-4.1.0.0,)"
+    ordering="NONE"
+    side="BOTH"
+
