--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
+# Used in ModTrades
 public net.minecraft.entity.merchant.villager.VillagerTrades$DyedArmorForEmeraldsTrade
 public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForItemsTrade
 public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForMapTrade
@@ -8,3 +9,14 @@ public net.minecraft.entity.merchant.villager.VillagerTrades$ItemWithPotionForEm
 public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsAndItemsTrade
 public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsTrade
 public net.minecraft.entity.merchant.villager.VillagerTrades$SuspiciousStewForEmeraldTrade
+
+# Used in net.jayugg.end_aspected.imported
+# No API yet for Foliage / Trunk Placers / Tree Decor yet
+public net.minecraft.world.gen.foliageplacer.FoliagePlacerType <init>(Lcom/mojang/serialization/Codec;)V
+public net.minecraft.world.gen.trunkplacer.TrunkPlacerType <init>(Lcom/mojang/serialization/Codec;)V
+public net.minecraft.world.gen.treedecorator.TreeDecoratorType <init>(Lcom/mojang/serialization/Codec;)V
+
+# Used in Trunk Mover Upper
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236906_d_
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236907_e_
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236908_f_
